--- a/static/app.css
+++ b/static/app.css
@@ -56,3 +56,13 @@ html {
     width: 80%;
     border-radius: 5px;
 }
+
+.btn-logout{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
