--- a/static/app.css
+++ b/static/app.css
@@ -66,3 +66,32 @@ html {
 	cursor: pointer;
 	outline: inherit;
 }
+
+#content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-content {
+    margin: 0 20px;
+    background-color: rgba(51, 51, 51, 0.15);
+    border-radius: 8px;
+    border-width: 0;
+    color: #333333;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    list-style: none;
+    padding: 10px 12px;
+    text-align: center;
+    transition: all 200ms;
+    vertical-align: baseline;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    text-decoration: none;
+}
