--- a/static/app.css
+++ b/static/app.css
@@ -46,16 +46,12 @@ html {
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
+    display: flex;
     padding: 20px;
-    text-align: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.post img {
-    width: 80%;
-    border-radius: 5px;
-}
 
 .btn-logout{
 	background: none;
@@ -94,4 +90,45 @@ html {
     -webkit-user-select: none;
     touch-action: manipulation;
     text-decoration: none;
+}
+
+.card {
+  width: 500px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  margin: 20px;
+  padding: 30px 10px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    display: flex;
+    padding: 2px 16px;
+    flex-direction: column;
+}
+
+.post img {
+    width: 80%;
+    border-radius: 5px;
+}
+
+.snippet-head{
+    display: flex;
+    font-size: 1rem;
+}
+
+.right-elem{
+    margin-left: auto;
+}
+
+h1{
+    font-size: 1.2rem;
+}
+
+.date-created{
+    font-size: 0.6rem;
 }
