Update home page display of images for ticket creation

--- a/review/templates/partials/ticket_snippet.html
+++ b/review/templates/partials/ticket_snippet.html
@@ -7,6 +7,6 @@
         </div>
         <h1>{{ ticket.title }}</h1>
         <p>{{ ticket.description }}</p>
-        <img class="" src="{{ ticket.image }}">
+        <img class="" src="{{ ticket.image.url }}">
     </div>
 </div>
