--- a/review/templates/review/home.html
+++ b/review/templates/review/home.html
@@ -7,7 +7,7 @@
             <a class="button-content" role="button" href="{% url 'ticket_create' %}">Demander une critique</a>
         </div>
         <div class="btn-content">
-            <button class="button-content" role="button">Créer une critique</button>
+            <a class="button-content" role="button" href="{% url 'review_create' %}">Créer une critique</a>
         </div>
     </div>
 
