--- a/review/templates/review/create_ticket.html
+++ b/review/templates/review/create_ticket.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Créer un ticket</h2>
-    <form method="post" enctype="multipart/form-data">
-        {{ ticket_form.as_p }}
-        {{ photo_form.as_p }}
-        {% csrf_token %}
-        <button type="submit" >Publier</button>
-    </form>
+
+{% load crispy_forms_tags %}
+
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% crispy ticket_form ticket_form.helper %}
+</form>
 {% endblock content %}
+
+
