Fix a bug where home page bugged when image missing from a ticket

--- a/review/templates/partials/ticket_snippet.html
+++ b/review/templates/partials/ticket_snippet.html
@@ -7,6 +7,8 @@
         </div>
         <h1>{{ ticket.title }}</h1>
         <p>{{ ticket.description }}</p>
-        <img class="" src="{{ ticket.image.url }}">
+        {% if ticket.image %}
+            <img class="" src="{{ ticket.image.url }}">
+        {% endif %}
     </div>
 </div>
