add delete and edit for tickets and reviews

--- a/review/templates/review/edit_review.html
+++ b/review/templates/review/edit_review.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Création de critique</h2>
-    {% load crispy_forms_tags %}
+{% load crispy_forms_tags %}
+<h2>Edition de critique</h2>
     {% crispy review_form review_form.helper %}
 {% endblock content %}
