--- a/review/templates/partials/review_snippet.html
+++ b/review/templates/partials/review_snippet.html
@@ -8,7 +8,7 @@
             <div class="date-created right-elem">{{ review.time_created|get_posted_at_display }}</div>
         </div>
         <h1>{{ review.headline }}</h1>
-        <p>{{ review.description }}</p>
+        <p>{{ review.body }}</p>
     </div>
     <div class="container border_around">
         <div class="snippet-head">
@@ -20,5 +20,29 @@
         {% if review.ticket.image %}
         <img class="" src="{{ review.ticket.image.url }}">
         {% endif %}
+        {% if review.ticket.user == user %}
+        <div class="container">
+            <div class="horizontal-align align-center-horizontal margin_top">
+                <div class="btn-content">
+                    <a class="button-content" role="button" href="{% url 'ticket_delete' review.ticket.id %}">Supprimer</a>
+                </div>
+                <div class="btn-content">
+                    <a class="button-content" role="button" href="{% url 'ticket_edit' review.ticket.id %}">Editer</a>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
+    {% if review.user == user %}
+    <div class="container">
+        <div class="horizontal-align align-center-horizontal margin_top">
+            <div class="btn-content">
+                <a class="button-content" role="button" href="{% url 'review_delete' review.id %}">Supprimer</a>
+            </div>
+            <div class="btn-content">
+                <a class="button-content" role="button" href="{% url 'review_edit' review.id %}">Editer</a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
