Move menu from side to top and

--- a/review/templates/review/home.html
+++ b/review/templates/review/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load ticket_extras %}
 {% block content %}
-    <h2>Votre flux</h2>
+    <div class="home-title">Votre flux</div>
     <div id="content">
         <div class="btn-content">
             <a class="button-content" role="button" href="{% url 'ticket_create' %}">Demander une critique</a>
