--- a/static/app.css
+++ b/static/app.css
@@ -1,39 +1,55 @@
 html {
+    background-color: e5dfd8;
     font-family: Arial;
 }
 
-/* The sidebar menu */
-.sidebar {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 220px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+
+nav {
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
     left: 0;
-    background-color: #1d3030;
-    color:  #ffffe6;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 100%;
+    padding: 16px 20px 16px 20px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    background: #312f36;
+    color: white;
+    @media (min-width: 640px) {
+    padding: 16px 50px 16px 50px;
+    }
 }
-
-/* The navigation menu links */
-.sidebar a {
+a {
+    color: inherit;
     text-decoration: none;
-    color:  #ffffe6;
-    display: block;
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
 }
-
-/* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-    color: #f1f1f1;
+.list {
+    list-style-type: none;
+    margin-left: auto;
+    align-items: center;
+    display: none;
+    @media (min-width: 640px) {
+      display: flex;
+    }
+    li {
+      margin-left: 20px;
+    }
+}
+.center-items{
+    display: flex;
+    margin: auto;
+    align-items: center;
 }
 
 /* Style page content */
 .main {
     margin-left: 240px;
-    padding: 20px;
+    padding: 100px 20px 20px 20;
 }
 
 .avatar {
@@ -93,20 +109,21 @@ html {
 }
 
 .card {
-  width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-  margin: 20px;
-  padding: 10px 10px;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: fff8f1;
+    transition: 0.3s;
+    border-radius: 5px;
+    margin: 20px;
+    padding: 10px 10px;
 }
 
 .card-follow {
-  width: 100%;
-  border: solid;
-  border-width: 2px;
-  margin: 1px;
-  padding: 0 0 0 10px;
+    width: 100%;
+    border: solid;
+    border-width: 2px;
+    margin: 1px;
+    padding: 0 0 0 10px;
 }
 
 .card:hover {
@@ -124,8 +141,14 @@ html {
     justify-content: flex-end;
 }
 
+.container-follow input[type="text"], textarea {
+
+  background-color : #e5dfd8;
+
+}
+
 .justify-start {
-  margin-right: auto;
+    margin-right: auto;
 }
 
 .post img {
@@ -198,4 +221,12 @@ h1{
 
 .margin_top{
     margin-top: 16px;
+}
+
+.home-title{
+    padding: 0 0 20 0;
+    display: flex;
+    place-content: center;
+    font-size: xx-large;
+    font-weight: bold;
 }
