--- a/static/app.css
+++ b/static/app.css
@@ -223,7 +223,7 @@ h1{
     margin-top: 16px;
 }
 
-.home-title{
+.center-title{
     padding: 0 0 20 0;
     display: flex;
     place-content: center;
