--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <a href="{% url 'home' %}">LITRevu</a>
     <ul class="list">
         <li><a href="{% url 'home' %}">Flux</a></li>
-        <li><a href="">Vos posts</a></li>
+        <li><a href="{% url 'my_posts' %}">Mes posts</a></li>
         <li><a href="{% url 'follow' %}">Abonnements</a></li>
         <li>
             <form class="center-items" method="post" action="{% url 'logout' %}">
