--- a/review/templates/review/create_ticket.html
+++ b/review/templates/review/create_ticket.html
@@ -5,7 +5,9 @@
 <h2>Création de ticket</h2>
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {% crispy ticket_form ticket_form.helper %}
+    <div class="card">
+        {% crispy ticket_form ticket_form.helper %}
+    </div>
 </form>
 {% endblock content %}
 
