--- a/review/templates/review/create_ticket.html
+++ b/review/templates/review/create_ticket.html
@@ -2,13 +2,15 @@
 {% block content %}
 
 {% load crispy_forms_tags %}
-<h2>Création de ticket</h2>
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
+<div class="grid-container">
+    <h2>Création de ticket</h2>
     <div class="card">
-        {% crispy ticket_form ticket_form.helper %}
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% crispy ticket_form ticket_form.helper %}
+        </form>
     </div>
-</form>
+</div>
 {% endblock content %}
 
 
