--- a/review/templates/review/edit_review.html
+++ b/review/templates/review/edit_review.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load crispy_forms_tags %}
-<h2>Edition de critique</h2>
-<div class="card">
-    {% crispy review_form review_form.helper %}
+<div class="grid-container">
+    <h2>Edition de critique</h2>
+    <div class="card">
+        {% crispy review_form review_form.helper %}
+    </div>
+    <div> Vous êtes en train de modifier votre critique concernant le post suivant</div>
+    {% include 'partials/ticket_snippet.html' with ticket=ticket %}
 </div>
 {% endblock content %}
