--- a/review/templates/review/delete_ticket.html
+++ b/review/templates/review/delete_ticket.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load ticket_extras %}
-<div class="card ">
-    <div class="container">
-        <form class="no-margin" action="" method="post">
-            {% csrf_token %}
-            <p>Voulez‑vous vraiment supprimer ce ticket ?</p>
-            <div class="horizontal-align align-center-horizontal margin_top">
-                <div class="btn-content">
-                    <input class="button-content" formaction="{% url 'ticket_delete' ticket_id %}" type="submit"
-                           value="Confirmer">
+<div class="grid-container">
+    <div class="card ">
+        <div class="container">
+            <form class="no-margin" action="" method="post">
+                {% csrf_token %}
+                <p>Voulez‑vous vraiment supprimer ce ticket ?</p>
+                <div class="horizontal-align align-center-horizontal margin_top">
+                    <div class="btn-content">
+                        <input class="button-content" formaction="{% url 'ticket_delete' ticket_id %}" type="submit"
+                               value="Confirmer">
+                    </div>
+                    <div class="btn-content">
+                        <input class="button-content" role="button" formaction="{% url 'home'%}" type="submit"
+                               value="Abandonner">
+                    </div>
                 </div>
-                <div class="btn-content">
-                    <input class="button-content" role="button" formaction="{% url 'home'%}" type="submit"
-                           value="Abandonner">
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock content %}
