--- a/review/templates/review/edit_ticket.html
+++ b/review/templates/review/edit_ticket.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load crispy_forms_tags %}
-<h2>Edition de ticket</h2>
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
+<div class="grid-container">
+    <h2>Edition de ticket</h2>
     <div class="card">
-        {% crispy ticket_form ticket_form.helper %}
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% crispy ticket_form ticket_form.helper %}
+        </form>
     </div>
-</form>
+</div>
 {% endblock content %}
 
 
